# notify

./: Cargo.toml  README.md
backend-fsevent/: Cargo.toml
backend-fsevent/src/: lib.rs  watcher.rs
backend-fsevent/tests/: compliance.rs
backend/src/: event.rs
examples/: monitor_debounced.rs  monitor_raw.rs
src/: fsevent.rs  inotify.rs  lib.rs  null.rs  poll.rs  windows.rs
src/debounce/: mod.rs  timer.rs
tests/: debounce.rs  event_path.rs  fsevents.rs  notify.rs  watcher.rs  windows.rs
tests/utils/: mod.rs
